@@ -1,3 +1,11 @@
+2010-10-07  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-util.el (w3m-make-local-hook): New function.
+
+	* mime-w3m.el (mime-display-message)
+	* w3m-mail.el (w3m-mail-compose-with-vm)
+	* w3m.el (w3m-set-buffer-unseen, w3m-buffer-setup): Use it.
+
 2010-10-06  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-ems.el (w3m-add-local-hook, w3m-remove-local-hook): Abolish.
